# infotecs-task

./: CMakeLists.txt  README.md
src/: ArgumentsParser.h  CMakeLists.txt  Primes.cpp  Primes.h  SpecialPrimes.cpp  SpecialPrimes.h  main.cpp
tests/: ArgumentsParserTest.cpp  CMakeLists.txt  Primes_test.cpp  SpecialPrimesTest.cpp
